Sculpting Animation #70406

Closed
opened 2019-10-01 00:37:00 +02:00 by Aleš Herink · 5 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 14:22, hash: 884a385287
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error
Hi guys!
Just add Cube.
Add some keyframe for animation.
Play animation
StartSculpting mode while animation still play.
try to move with keayframe while animation is playing and you have sculpting mode.

If you do not succeed with reproducing you can ask me on https://www.twitch.tv/thecoffeeharry and I!ll explaint

Thank you for you time and AwesomeWork!

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 14:22, hash: `884a385287` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** Hi guys! Just add Cube. Add some keyframe for animation. Play animation StartSculpting mode while animation still play. try to move with keayframe while animation is playing and you have sculpting mode. If you do not succeed with reproducing you can ask me on https://www.twitch.tv/thecoffeeharry and I!ll explaint Thank you for you time and AwesomeWork!
Author

Added subscriber: @thecoffeeharry

Added subscriber: @thecoffeeharry
Sybren A. Stüvel self-assigned this 2019-10-02 14:17:21 +02:00
Sybren A. Stüvel removed their assignment 2019-10-02 14:47:04 +02:00

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

The crash occurs even when the keyframes are on a different object than the sculpted mesh. For example, changing the keyframe of a rotating lamp while sculpting also causes the crash. It happens in applyTimeTranslateValue() where td->val = NULL, so assigning to *(td->val) segfaults.

I'll leave the fix for someone with more knowledge about how sculpt mode & the anim system interact.

The crash occurs even when the keyframes are on a different object than the sculpted mesh. For example, changing the keyframe of a rotating lamp while sculpting also causes the crash. It happens in `applyTimeTranslateValue()` where `td->val = NULL`, so assigning to `*(td->val)` segfaults. I'll leave the fix for someone with more knowledge about how sculpt mode & the anim system interact.

This issue was referenced by 0c0d2f3581

This issue was referenced by 0c0d2f3581de6e4d153250933e2aa6b552d8c36b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-10-07 18:06:44 +02:00
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70406
No description provided.