Fix T70406: crash editing keyframes while in sculpt mode